# Vocal

./: .gitignore  README.md  pyproject.toml
packaging/: vocal-autostart.desktop  vocal.desktop
scripts/: gen_icons.py  setup-permissions.sh
src/vocal/: __init__.py  __main__.py  audio.py  base_engine.py  benchmark.py  cli.py  config.py  engine.py  hotkey.py  live.py  notify.py  output.py  phrasebook.py  postprocess.py  state.py  transcriber.py  tray.py  utils.py  vad.py
