[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vocal"
version = "0.1.0"
description = "Local CPU-only dictation tool using faster-whisper"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.1.0",
    "sounddevice>=0.5.0",
    "numpy>=1.24.0",
    "pynput>=1.7.6",
    "evdev>=1.7.0; sys_platform == 'linux'",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
vocal = "vocal.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
